Add JSPaint to Source directory

--- a/Source/JSPaint/images/meta/index.html
+++ b/Source/JSPaint/images/meta/index.html
@@ -1,4 +1,4 @@
-Add JSPaint to Source directory<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
 <title>HRCloud2 | Cloud Authentication</title>
 <body>
